--- a/popup.html
+++ b/popup.html
@@ -1,21 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <title>Travel Companion</title>
-    <style>
-      body { font-family: Arial, sans-serif; width: 320px; padding: 12px; }
-      textarea { width: 100%; height: 100px; margin-bottom: 8px; }
-      button { padding: 8px 12px; margin: 4px 0; width: 100%; }
-      .result { margin-top: 10px; padding: 8px; background: #f5f5f5; border-radius: 4px; }
-    </style>
-  </head>
-  <body>
-    <h3>Travel & Accessibility Companion</h3>
-    <textarea id="inputText" placeholder="Paste travel text here..."></textarea>
-    <button id="processBtn">Process</button>
-    <div class="result" id="translation"></div>
-    <div class="result" id="summary"></div>
-    <div class="result" id="simplified"></div>
-    <script src="popup.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Travel AI</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <h3>Travel & Accessibility Companion</h3>
+  <input id="fileInput" type="file" accept="image/*" />
+  <div>
+    <label for="targetLang">Translate to:</label>
+    <select id="targetLang">
+      <option value="en">English</option>
+      <option value="es">Spanish</option>
+      <option value="fr">French</option>
+      <option value="ja">Japanese</option>
+    </select>
+  </div>
+  <button id="analyzeBtn">Analyze Photo</button>
+
+  <div id="status">Ready.</div> <h4>Extracted Text</h4>
+  <pre id="extractedText"></pre>
+
+  <h4>Translated Text</h4>
+  <pre id="translatedText"></pre>
+
+  <h4>Summary</h4>
+  <pre id="summaryText"></pre>
+
+  <script src="popup.js"></script> </body>
 </html>
